--- a/cloudfunction/package.json
+++ b/cloudfunction/package.json
@@ -10,7 +10,7 @@
   "license": "Apache-2.0",
   "keywords": [],
   "scripts": {
-    "start": "functions-framework --source=build/src/ --target=helloWorld --port=3001",
+    "start": "functions-framework --source=build/src/ --target=index --port=3001",
     "watch": "concurrently \"tsc -w\" \"nodemon --watch ./build/ --exec npm run start\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "gts lint",
