--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"axios": "^0.26.1",
 		"core-js": "^3.8.3",
 		"register-service-worker": "^1.7.2",
+		"sass": "^1.50.1",
+		"sass-loader": "^12.6.0",
 		"vue": "^3.2.13",
 		"vue-axios": "^3.4.1",
 		"vue-class-component": "^8.0.0-0",
