--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"core-js": "^3.8.3",
 		"register-service-worker": "^1.7.2",
 		"vue": "^3.2.13",
-		"vue-advanced-chat": "^1.5.4",
+		"vue-advanced-chat": "https://github.com/antoine92190/vue-advanced-chat/tarball/next",
 		"vue-axios": "^3.4.1",
 		"vue-class-component": "^8.0.0-0",
 		"vue-router": "^4.0.3"
