--- a/cloudfunction/package.json
+++ b/cloudfunction/package.json
@@ -30,6 +30,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "@google-cloud/functions-framework": "^3.1.0"
+    "@google-cloud/functions-framework": "^3.1.0",
+    "googleapis": "^100.0.0"
   }
 }
